--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.format-sql=true
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.hibernate-orm.sql-load-script=import.sql
